<resources>
    <string name="app_name">SmartClinic</string>
    <string name="treatment_time">Time: %1$s</string>
    <string name="welcome_text">Hi, %1$s</string>
    <string name="appointment_deny">⚠ You already has an appointment booked!</string>
    <string name="appointment_deny_notification">You can cancel your appointment in the appointment view</string>
    <string name="day_no_appointment">Sorry! No more appointment is available today!</string>
    <string name="no_answer">No Answer</string>
    <string name="product_information">Product Information</string>
    <string name="volume">Volume</string>
    <string name="brand">Brand</string>
    <string name="from">From</string>
    <string name="description">Description</string>
    <string name="ingredient">Ingredient</string>
    <string name="user_manual">User manual</string>
    <string name="preservation_and_caution">Preservation and Caution</string>
    <string name="epatient">EPATIENT</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="otp_hint">OTP</string>
    <string name="doctor_label">Doctor</string>
    <string name="service_label">Service</string>
    <string name="location_label">Location</string>
    <string name="address">29 Street Phu Chau Tam, Phu Ward, Thu Duc city</string>
    <string name="time_label">Time</string>
    <string name="status_label">Status</string>
    <string name="doctor_name">Doctor Coco</string>
    <string name="read_more">Read more</string>
    <string name="city_hospital">CITY HOSPITAL</string>
    <string name="hospital_location">Hospital location</string>
    <string name="book_appointment_label">Book Appointment</string>
    <string name="view_all_services">View All Services</string>
    <string name="more"><![CDATA[More >]]></string>
    <string name="add_appointment">Add appointment</string>
    <string name="appointment">Appointment</string>
    <string name="appointment_waiting">You are having 1 appointment awaiting</string>
    <string name="invoice_warning">Your total invoice amount will be finalized at the clinic based upon any adjustments from insurance coverage or other promotional offers.</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="confirm_subtitle">Please confirm the details of your Appointment</string>
    <string name="date_and_time_label">Date and Time</string>
    <string name="reason">Reason</string>
    <string name="ask">Ask</string>
    <string name="forum">Forum</string>
    <string name="ask_title">Ask our doctor for free</string>
    <string name="ask_hint">Why am I beautiful ?</string>
    <string name="ask_warning">Ask anonymously</string>
    <string name="more_button">More</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="location">Location</string>
    <string name="welcome_back">welcome back!</string>
    <string name="got_a_problem">Got a problem?</string>
    <string name="phone_label">Phone</string>
    <string name="test_number">0774022683</string>
    <string name="password_label">Password</string>
    <string name="test_password">123</string>
    <string name="forget_password">Forget password?</string>
    <string name="error">ERROR</string>
    <string name="login_label">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="prescription">Prescription</string>
    <string name="name_label">Name</string>
    <string name="symptom_label">Symptom</string>
    <string name="diagnose_label">Diagnose</string>
    <string name="number">No.</string>
    <string name="drug_label">Drug</string>
    <string name="quality_label">Quality</string>
    <string name="note_label">Note</string>
    <string name="account"><![CDATA[Account >]]></string>
    <string name="undefined">-</string>
    <string name="age_label">Age</string>
    <string name="gender_label">Gender</string>
    <string name="weight_label">Kg</string>
    <string name="others">Others</string>
    <string name="customer_service">Customer service</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log out</string>
    <string name="update_information">Update Information</string>
    <string name="change_avatar">Change avatar</string>
    <string name="dob_hint">Date of birth</string>
    <string name="weight_hint">Weight</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="continue_button">Continue</string>
    <string name="reason_label">Reason for Appointment</string>
    <string name="reason_subtitle">Please describe your symptoms, questions, or condition so our care providers may provide you with the appropriate care.</string>
    <string name="reason_hint">Type your reason here</string>
    <string name="choose_date_and_time">Choose Date and Time</string>
    <string name="date_and_time_subtitle">Please select a date and time for your appointment</string>
    <string name="timezone">These time slots are in Vietnam timezone (GMT+7:00)</string>
    <string name="home_label">Home</string>
    <string name="profile">Profile</string>
    <string name="medical_records">Medical Records</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sorry">Sorry, but nothing matched your search term. Please try again!</string>
</resources>