<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_label"
        android:contentDescription="@string/home_label"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/appointment"
        android:icon="@drawable/ic_clock"
        android:title="@string/appointment"
        android:contentDescription="@string/appointment"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/blog"
        android:icon="@drawable/ic_blog"
        android:title="@string/forum"
        android:contentDescription="@string/forum"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:contentDescription="@string/profile"
        app:showAsAction="ifRoom"
        />
</menu>