<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.fragments.ProfileEditFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_information"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginVertical="8dp"
                android:orientation="vertical">
                <com.team13.patientclient.CircularImageView
                    android:id="@+id/profile_edit_avatar"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="12dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/avatar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/change_avatar" />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/outlinedNameField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/name_label"
                app:startIconDrawable="@drawable/ic_profile"
                android:layout_marginVertical="12dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:id="@+id/profile_edit_name" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/outlinedBirthField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/dob_hint"
                app:startIconDrawable="@drawable/ic_schedule"
                android:layout_marginVertical="12dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:id="@+id/input_birth"
                    android:focusable="false"
                    android:longClickable="false"
                    android:focusableInTouchMode="false"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/outlinedWeightField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/weight_hint"
                app:startIconDrawable="@drawable/ic_weight_scale"
                android:layout_marginVertical="12dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/profile_edit_weight"
                    android:text=""/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_label"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:id="@+id/profile_edit_gender"
                android:weightSum="2">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:id="@+id/profile_edit_gender_male"
                    android:layout_weight="1"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:id="@+id/profile_edit_gender_female"
                    android:layout_weight="1"/>
            </RadioGroup>
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="15dp"
                style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
                android:progress="50"
                android:visibility="gone"
                android:id="@+id/progress_bar"
                android:progressTint="@color/pink_dark"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_edit_save_button"
                android:text="@string/save"
                android:layout_marginTop="16dp"
                style="@style/CornerButton"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>