<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.fragments.ReasonPickFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:layout_alignParentBottom="true"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:textAllCaps="false"
                android:text="@string/continue_button"
                android:textSize="16sp"
                style="@style/CornerButton"
                android:id="@+id/process_button"/>
        </com.google.android.material.card.MaterialCardView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp">
                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="75"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reason_label"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="@string/reason_subtitle"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/outlinedReasonField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/reason_hint"
                    app:counterEnabled="true"
                    app:counterMaxLength="255"
                    app:counterTextColor="@color/purple"
                    app:counterOverflowTextColor="@color/red"
                    android:layout_marginTop="32dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:id="@+id/input_reason"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</FrameLayout>