<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.fragments.ForumFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab_ask"
            android:layout_gravity="end|bottom"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="64dp"
            app:icon="@drawable/ic_edit"
            android:text="@string/ask"/>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scroll_container">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/BottomCornerCard"
                    android:backgroundTint="@color/pink_primary">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/forum"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:layout_marginVertical="16dp"/>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    style="@style/OutlinedCard"
                    app:cardCornerRadius="9dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="16dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="16dp">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_ask"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ask_title"
                                android:textStyle="bold"
                                android:textSize="20sp"
                                android:layout_marginLeft="16dp"/>
                        </LinearLayout>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/outlined_rounded_shape"
                            android:hint="@string/ask_hint"
                            android:textSize="14sp"
                            android:id="@+id/input_question"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="16dp"
                            android:weightSum="3">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ask_warning"
                                android:layout_weight="2"
                                android:textStyle="italic"
                                android:textSize="16sp"/>
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ask"
                                android:id="@+id/submit_button"
                                android:textSize="16sp"
                                android:layout_weight="1"
                                android:minWidth="0dp"
                                android:minHeight="0dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/pink_dark"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/blog_list"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="16dp"
                    android:minHeight="250dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/more_button"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    style="@style/Widget.MaterialComponents.Button"
                    />
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardCornerRadius="9dp"
                    android:backgroundTint="@color/grey"
                    android:layout_marginHorizontal="16dp">

                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/pink_primary">

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>